--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,4 @@
-@import url('https://dsrev.ru/assets/fonts/sansation_regular/stylesheet.css');
+@import url('https://dsrev.github.io/assets/fonts/sansation_regular/stylesheet.css');
 
 html {
     font-family: 'sansationregular', sans-serif;
